all routes are defined I thinnkkk

--- a/server/package.json
+++ b/server/package.json
@@ -12,8 +12,7 @@
     "api",
     "server-side"
   ],
-  "author": "Joshua Slate",
-  "license": "ISC",
+  "author": "Jonathan Pedigo",
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.15.0",
