got all the pre-game routes down, now can start on game

--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha -S --ui bdd --require ./tests/spec_helper.js --recursive ./tests --reporter spec",
-    "dev": "nodemon index.js"
+    "dev": "nodemon src/index.js --watch src --watch ../shared/design"
   },
   "keywords": [
     "mern",
