--- a/client/package.json
+++ b/client/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mern-starter-client",
   "version": "1.0.0",
-  "description": "Client-side of MERN Starter.",
+  "description": "Client-side of Papa Bear 2.",
   "main": "index.js",
   "scripts": {
     "start": "node ./node_modules/webpack-dev-server/bin/webpack-dev-server.js"
