--- a/server/package.json
+++ b/server/package.json
@@ -16,7 +16,9 @@
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.15.0",
+    "cookie-parser": "^1.4.3",
     "express": "^4.13.4",
+    "express-session": "^1.15.2",
     "jsonwebtoken": "^5.7.0",
     "mailchimp-v3": "^1.0.1",
     "mailgun-js": "^0.7.10",
