--- a/server/package.json
+++ b/server/package.json
@@ -28,6 +28,7 @@
     "passport": "^0.3.2",
     "passport-jwt": "^2.0.0",
     "passport-local": "^1.0.0",
+    "passport.socketio": "^3.7.0",
     "sendgrid": "^4.7.1",
     "socket.io": "^1.4.6",
     "stripe": "^4.6.0"
