game update event works :) begin actual game logic

--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
   "author": "Jonathan Pedigo",
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
+    "bluebird": "^3.5.0",
     "body-parser": "^1.15.0",
     "cookie-parser": "^1.4.3",
     "express": "^4.13.4",
