--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "react-router": "^2.6.0",
     "redux": "^3.5.2",
     "redux-form": "^6.0.0-rc.3",
+    "redux-logger": "^3.0.6",
     "redux-thunk": "^2.1.0",
     "socket.io": "^1.4.6",
     "socket.io-client": "^1.4.6"
