--- a/client/package.json
+++ b/client/package.json
@@ -4,7 +4,7 @@
   "description": "Client-side of Papa Bear 2.",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server -d"
+    "start": "webpack-dev-server -d --host 0.0.0.0"
   },
   "author": "Joshua Slate",
   "license": "MIT",
