--- a/package.json
+++ b/package.json
@@ -3,6 +3,11 @@
   "version": "1.0.0",
   "description": "API server for MERN Starter, powered by Express.",
   "main": "index.js",
+  "scripts": {
+    "test": "mocha -S --ui bdd --require ./tests/spec_helper.js --recursive ./tests --reporter spec",
+    "dev": "nodemon server/index.js --watch server --watch ./client/src/design",
+    "start": "node server/index.js && react-scripts-start"
+  },
   "keywords": [
     "mern",
     "api",
@@ -31,8 +36,6 @@
     "stripe": "^4.6.0"
   },
   "devDependencies": {
-    "babel-eslint": "^7.1.0",
-    "eslint": "^3.9.1",
     "eslint-config-airbnb": "^13.0.0",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^2.2.3",
@@ -40,7 +43,6 @@
     "mocha": "^3.2.0",
     "nodemon": "^1.11.0",
     "should": "^11.1.1",
-    "supertest": "^2.0.0",
-    "webpack": "^4.39.2"
+    "supertest": "^2.0.0"
   }
 }
