--- a/package.json
+++ b/package.json
@@ -43,6 +43,6 @@
     "mocha": "^3.2.0",
     "nodemon": "^1.11.0",
     "should": "^11.1.1",
-    "supertest": "^2.0.0",
+    "supertest": "^2.0.0"
   }
 }
